Alignment Fix

--- a/frontend/src/Pages/ViewProjectPage/ViewProjectPage.scss
+++ b/frontend/src/Pages/ViewProjectPage/ViewProjectPage.scss
@@ -21,6 +21,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                flex-direction: row;
                 img {
                     border-radius: 30px;
                     width: 250px;
